Implemented unit test for attendanceRecordService